Deal with requests that are absolute URIs with a target that has host and port. The target replaces the URIs host/port.